--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -1,8 +1,7 @@
-
 <!doctype html>
 <html lang="en">
+{% load staticfiles %}
   <head>
-    {% load staticfiles %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -28,7 +27,8 @@
       }
     </style>
     <!-- Custom styles for this template -->
-     </head>
+   
+  </head>
   <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -39,51 +39,28 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav ml-auto ">
                 <a class="nav-item nav-link" href="https://github.com/emmiejw">GitHub</a>
-                <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
-                <a class="nav-item nav-link" href="#">Twitter</a>
+                <a class="nav-item nav-link active" href="{% url 'allblogs'%}">Blog</a>
+                <a class="nav-item nav-link" href="">Twitter</a>
               </div>
             </div>
           </nav>
     </header>
 
 <main role="main">
-
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h1 class="jumbotron-heading">Hi, I'm Emmie.</h1>
-      <img src="{% static 'emmie2.jpg' %}" height="300" />
-      <br>
-      <br>
-      <p class="lead text-muted">I'm loving learning different backend frameworks and seeing what I can create and manipulate.</p>
-      <p>
-        <a href="mailto:emilyprice84@outlook.com" class="btn btn-info my-2">Email me</a>
-      </p>
-    </div>
-  </section>
-
-  <div class="album py-5 bg-light">
-        <div class="container">
-  
-          <div class="row">
-  
-            {% for job in jobs.all %}
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" src="{{ job.image.url }}" />
-                <div class="card-body">
-                  <p class="card-text">{{ job.summary }}</p>
-                </div>
-              </div>
+    <center>
+        <br>
+        <h1>{{ blog.title }}</h1>
+        <br>
+        <br>
+        <div class="card">
+            <img src="{{ blog.image.url }}" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">{{ blog.body }}</p>
             </div>
-            {% endfor %}
-  
-  
           </div>
-        </div>
-      </div>
-  
+    </center>
 </main>
-
+<br>
 <footer class="text-muted">
   <div class="container text-center">
    <p> <i class="far fa-copyright"></i> of Emmie Wallace - Price {% now "Y" %}</p>
